# ai-ie-backend-rag-can-index-speed

./: SQL_RAG_提示词.txt  SQL_RAG_程序记录.txt  fix-codex-plus-plus-restart.cmd  fix-codex-plus-plus-restart.ps1  test-codex-plus-plus-restart.ps1
ai-ie-backend/: .gitignore  README.md  SQLSERVER_2022_relationship_evidence.md  docker-compose.yml  orm_models.py  pyproject.toml  rag_schema_map_readable.md  requirements.txt  系统操作管理后端使用说明.md
ai-ie-backend/app/: config.py  main.py
ai-ie-backend/app/SQL_RAG/: README.md  __init__.py  check-connection.ps1  docker-compose.yml  main.py
ai-ie-backend/app/SQL_RAG/agent_webUI/: app.js  (+4 more)
ai-ie-backend/app/ai/: __init__.py  config.py  exceptions.py  llm.py  prompts.py
ai-ie-backend/app/db/: ops.py
ai-ie-backend/app/index/: base.py  document_index_manager.py  vector_index.py
ai-ie-backend/app/llm/: llm_error_types.py
ai-ie-backend/app/models/: base.py  models.py  orm_models.py
ai-ie-backend/app/query/: query.py
ai-ie-backend/app/routers/: BiaoZhunGongXu_router.py  CaiZhiJiaGe_router.py  CaiZhiLeiXing_router.py  CaoZuoRiZhi_router.py  DiQuBianMa_router.py  DocumentIndex_router.py  GongSiGongJia_router.py  LiShiGongJia_router.py  QuYuGongJia_router.py  XiangBaoBaoXing_router.py  XiangBaoBuWei_router.py  XiangBaoCaiZhi_router.py  XiangBaoGongZhong_router.py  admin_router.py  document_index_router.py  dxf_router.py  gongyiguihua_router.py  rag_router.py  time_price_infer_router.py  user_router.py  vlm_router.py  work_process_router.py
ai-ie-backend/app/scripts/: diqubm_db.py  ingest_rules_to_qdrant.py  main.py  rules.json  xiugai.py  地区.xlsx  规则表.json
ai-ie-backend/app/tasks/: collection.py  document.py  reconciler.py  scheduler.py
ai-ie-backend/app/utils/: database.py  exception_handler.py  exceptions.py  logger.py  minio_config.py  minio_utils.py  response.py  snowflake_generator.py  utils.py
ai-ie-backend/app/vectorstore/: base.py  connector.py  qdrant_connector.py
ai-ie-backend/config/: __init__.py  celery.py  celery_tasks.py
(+262 files in other folders)
