[project]
name = "ai-ie-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioodbc>=0.5.0",
    "backports-tarfile==1.2.0",
    "brotlicffi==1.2.0.0",
    "ezdxf==1.4.3",
    "fastapi==0.128.0",
    "httptools==0.7.1",
    "importlib-metadata==8.0.0",
    "jaraco-collections==5.1.0",
    "arize-phoenix>=16.5.0",
    "graphiti-core>=0.29.1",
    "langchain-core>=1.4.0",
    "langgraph>=1.2.2",
    "langsmith>=0.8.8",
    "llama-index-embeddings-langchain==0.4.1",
    "llama-index-embeddings-openai-like>=0.3.1",
    "llama-index-graph-stores-neo4j>=0.7.0",
    "llama-index-llms-openai-like==0.5.3",
    "llama-index>=0.14.12",
    "llama-index-vector-stores-qdrant>=0.9.0",
    "litellm==1.76.0",
    "llama-index>=0.14.12",
    "loguru>=0.7.3",
    "matplotlib==3.10.8",
    "minio==7.2.16",
    "mkl-fft==2.1.1",
    "mkl-random==1.3.0",
    "mcp>=1.27.2",
    "neo4j>=5.28.4",
    "openai==1.109.1",
    "packaging==24.2",
    "pip>=25.3",
    "pip-chill==1.0.3",
    "platformdirs==4.2.2",
    "pydantic-settings==2.12.0",
    "pyodbc==5.3.0",
    "pysocks==1.7.1",
    "python-dotenv==1.1.0",
    "python-multipart==0.0.21",
    "pyyaml==6.0.3",
    "qwen-agent>=0.0.34",
    "qdrant-client>=1.16.2",
    "sonyflake>=2.0.2",
    "sqlacodegen==3.2.0",
    "sqlalchemy==2.0.45",
    "sqlalchemy-to-pydantic>=0.0.8",
    "tomli==2.0.1",
    "uuid7>=0.1.0",
    "uvicorn==0.40.0",
    "watchfiles==1.1.1",
    "websockets==15.0.1",
    "win-inet-pton==1.1.0",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "django-celery-beat>=2.5",
    "celery>=5.3",
    "redis>=7.1.0",
    "openpyxl>=3.1.5",
    "booktype>=1.5",
    "flower>=2.0",
    "routers>=0.1.2",
    "aiokafka>=0.13.0",
    "kafka-python>=2.3.0",
    "fastembed>=0.8.0",
    "pypandoc>=1.17",
]
